--- a/css/home.css
+++ b/css/home.css
@@ -1,13 +1,13 @@
 body {
-    font-family: sans-serif;
+    font-family: “Playfair Display”, “Didot”, "Times New Roman", Times, serif;
 
-    color: black;
+    color: #1d1613;
 
-    background-color: rgb(235, 235, 235);
+    background-color: #dbd0bf;
 }
 
 a {
-    color: black;
+    color: #1d1613;
     text-decoration: none;
 }
 
