--- a/css/home.css
+++ b/css/home.css
@@ -152,7 +152,7 @@ div#about {
     justify-content: space-around;
     align-items: center;
 
-    margin-top: 15px;
+    margin-top: 20px;
 
     background-color: #8294b3;
 }
@@ -196,7 +196,7 @@ div#service {
     justify-content: space-around;
     align-items: center;
 
-    margin-top: 15px;
+    margin-top: 25px;
 
     background-color: #c19a85;
 }
@@ -238,7 +238,7 @@ div#contact {
     justify-content: space-around;
     align-items: center;
 
-    margin-top: 15px;
+    margin-top: 25px;
 
     background-color: rgb(240, 240, 240);
 }
@@ -281,7 +281,7 @@ div#contact1 {
     justify-content: space-around;
     align-items: center;
 
-    margin-top: 15px;
+    margin-top: 25px;
 
     background-color: #78807d;
 }
@@ -323,7 +323,7 @@ div#extra {
     justify-content: space-around;
     align-items: center;
 
-    margin-top: 15px;
+    margin-top: 25px;
 
     background-color: #eacfca;
 }
@@ -363,8 +363,8 @@ div#affilation {
     flex-direction: row-reverse;
     justify-content: space-around;
     align-items: center;
-
-    margin-top: 15px;
+    margin-bottom: 20px;
+    margin-top: 25px;
 
     background-color: #8a766c;
 }
