--- a/pages/price/css/price.css
+++ b/pages/price/css/price.css
@@ -15,18 +15,34 @@ a:hover {
     color: rgb(68, 68, 68);
 }
 
-nav.navbar { background-color: aliceblue; animation: navBarColor1 1s ease; }
+nav.navbar {
+    background-color: aliceblue;
+    animation: navBarColor1 1s ease;
+}
 
-nav.navbar:hover { background-color: rgb(219 208 191); animation: navBarColor 1s ease; }
+nav.navbar:hover {
+    background-color: rgb(219 208 191);
+    animation: navBarColor 1s ease;
+}
 
 @keyframes navBarColor {
-    from {background-color: aliceblue;}
-    to {background-color: rgb(219 208 191);}
+    from {
+        background-color: aliceblue;
+    }
+
+    to {
+        background-color: rgb(219 208 191);
+    }
 }
 
 @keyframes navBarColor1 {
-    from {background-color: rgb(219 208 191);}
-    to {background-color: aliceblue;}
+    from {
+        background-color: rgb(219 208 191);
+    }
+
+    to {
+        background-color: aliceblue;
+    }
 }
 
 nav img {
@@ -41,8 +57,8 @@ nav.navbar img:hover {
 }
 
 div#surround {
-    width:100vw;
-    height:100vh;
+    width: 100vw;
+    height: 100vh;
 
     background-color: #0000005e;
 
@@ -60,7 +76,7 @@ div#warranty {
     opacity: 0;
     transition: opacity ease 1s;
     position: fixed;
-    transform: translate(15vw,15vh);
+    transform: translate(15vw, 15vh);
     text-align: center;
     background-color: #d7f3f3;
     z-index: 11;
@@ -74,7 +90,6 @@ div#warrantyText {
     text-align: justify;
     background-color: #ffffff3d;
     border-radius: 15px;
-    box-shadow: 0px 0px 20px 5px lightsteelblue;
 }
 
 div#mainContent {
@@ -100,7 +115,6 @@ div#welcome {
     width: 100%;
 
     background-color: rgb(219 208 191);
-    box-shadow: 0px 5px 10px lightgoldenrodyellow;
 }
 
 div#welcome div#welcomeText {
@@ -186,7 +200,7 @@ div.Package div.box {
 div.Package div.packageImg {
     display: grid;
 
-    width:48vw;
+    width: 48vw;
 
     transition: width 0.5s ease;
 
@@ -194,13 +208,13 @@ div.Package div.packageImg {
 }
 
 div.Package img {
-    width:75%;
+    width: 75%;
 
     padding: 5px;
 }
 
 div.Package div.packageImg:hover {
-    width:50vw;
+    width: 50vw;
 }
 
 div.Package div.packageText {
@@ -211,7 +225,7 @@ div.Package div.packageText {
 
 div.Package div.packageText div {
     display: grid;
-    
+
     margin-bottom: 25px;
 }
 
@@ -266,10 +280,10 @@ div#footer {
 
     background-color: rgb(240, 240, 240) !important;
 
-    display: flex; 
+    display: flex;
     flex-wrap: wrap;
-    align-items: center; 
-    width: 100vw; 
+    align-items: center;
+    width: 100vw;
     height: max-content;
     justify-content: space-around;
 }
@@ -283,7 +297,7 @@ div#footer {
     }
 
     div.Package img {
-        width:90vw;
+        width: 90vw;
     }
 
     div.Package div.packageText {
