--- a/pages/sureStep/css/sureStep.css
+++ b/pages/sureStep/css/sureStep.css
@@ -46,12 +46,22 @@ nav.navbar:hover {
     }
 }
 
-
 nav img {
     width: 50px;
     transition: width 0.5s ease;
-
     margin-right: 10px;
+}
+
+img#main {
+    width: 25vw;
+    float: left;
+    padding: 35px;
+    margin-left: 90px;
+    transition: width 0.5s ease;
+}
+
+img:hover#main {
+    width: 32.4vw;
 }
 
 nav.navbar img:hover {
@@ -66,11 +76,15 @@ span {
 div#mainContent {
     display: grid;
     justify-items: center;
-
     margin-top: 50px;
 }
 
-div#headerContent {
+h2 {
+    text-align: center;
+    font-size: 50px;
+}
+
+div#header {
 
     padding: 25px;
 
@@ -80,39 +94,70 @@ div#headerContent {
     justify-content: space-around;
     align-items: center;
 
-    height: 100%;
+    height: 80%;
     width: 100%;
 
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(219 208 191);
+
 }
 
-div#welcome div#welcomeText {
+#content {
+    width: 1400px;
+}
+
+#contentBottom {
+    padding: 20px;
+}
+
+img#extraImg {
+    width: 25vw;
+    align-content: center;
+    padding: 35px;
+    transition: width 0.5s ease;
+
+}
+
+img:hover#extraImg {
+    width: 32.4vw;
+
+}
+
+#contentBottom p {
+    padding-right: 30px;
+    margin-right: 40px;
+    padding-top: 90px;
+    flex: auto;
+
+}
+
+div#header div#welcomeText {
     text-align: center;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
-
+    float: right;
     width: 47vw;
     transition: width 0.5s ease;
+    position: relative;
+    padding-top: 45px;
+
 }
 
-div#welcome div#welcomeText h1 {
+div#header div#welcomeText h1 {
 
     width: 100%;
 }
 
-div#welcome div#welcomeText p {
+div#header div#welcomeText p {
     text-align: center;
 }
 
-div#welcome div#imageHolder {
+div#header div#imageHolder {
     width: 45vw;
     height: 45vw;
     padding-top: 35px;
-    padding-left: 45px;
     transition: width 0.5s ease;
-
-    display: flex;
+    display: inline-flex;
     justify-content: start;
 
     overflow: hidden;
@@ -120,7 +165,7 @@ div#welcome div#imageHolder {
     position: relative;
 }
 
-div#welcome div#imageHolder:hover {
+div#header div#imageHolder:hover {
     width: 60vw;
 }
 
@@ -128,18 +173,13 @@ div#welcome div#imageHolder:hover {
     width: 35vw;
 }
 
-div#welcome div#intro {
-    padding-top: 25px;
-    padding-bottom: 10px;
-    margin-top: 25px;
 
-
-}
-
-div#welcome div#imageHolder img {
-    max-width: 75vw;
-
-    position: absolute;
+#extraImg {
+    width: 25vw;
+    float: right;
+    padding: 20px;
+    margin-left: 25px;
+    transition: width 0.5s ease;
 }
 
 div#footer {
@@ -150,320 +190,4 @@ div#footer {
     height: max-content;
     justify-content: space-evenly;
     background-color: rgb(235, 235, 235)
-}
-
-div#about {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-
-    margin-top: 15px;
-
-    background-color: #8294b3;
-}
-
-div#about img {
-    width: 100%;
-}
-
-div#about div#aboutImg {
-    width: 30vw;
-    transition: width 0.5s ease;
-}
-
-div#about div#aboutImg:hover {
-    width: 35.4vw;
-}
-
-div#about div#aboutText {
-    width: 50vw;
-
-    transition: width 0.5s ease;
-}
-
-#aboutImg:hover ~ #aboutText {
-    width: 42vw;
-}
-
-div#about div {
-    padding: 20px;
-}
-
-div#about div h2,
-h3 {
-    text-align: center;
-}
-
-div#service {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    align-items: center;
-
-    margin-top: 15px;
-
-    background-color: #c19a85;
-}
-
-div#service img {
-    width: 100%;
-}
-
-div#service div#serviceImg {
-    width: 30vw;
-    transition: width 0.5s ease;
-}
-
-div#service div#serviceImg:hover {
-    width: 35.4vw;
-}
-
-div#service div#serviceText {
-    width: 50vw;
-
-    transition: width 0.5s ease;
-}
-
-#serviceImg:hover ~ #serviceText {
-    width: 42vw;
-}
-
-div#service div {
-    padding: 20px;
-}
-
-div#service div h2 {
-    text-align: center;
-}
-
-div#contact {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-
-    margin-top: 15px;
-
-    background-color: rgb(240, 240, 240);
-}
-
-div#contact img {
-    width: 100%;
-}
-
-div#contact div#contactImg {
-    width: 30vw;
-    transition: width 0.5s ease;
-}
-
-div#contact div#contactImg:hover {
-    width: 35.4vw;
-}
-
-div#contact div#contactText {
-    width: 50vw;
-
-    transition: width 0.5s ease;
-}
-
-#contactImg:hover ~ #contactText {
-    width: 42vw;
-}
-
-div#contact div {
-    padding: 20px;
-}
-
-div#contact div h2 {
-    text-align: center;
-}
-
-div#contact1 {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    align-items: center;
-
-    margin-top: 15px;
-
-    background-color: #78807d;
-}
-
-div#contact1 img {
-    width: 100%;
-}
-
-div#contact1 div#contact1Img {
-    width: 30vw;
-    transition: width 0.5s ease;
-}
-
-div#contact1 div#contact1Img:hover {
-    width: 35.4vw;
-}
-
-div#contact1 div#contact1Text {
-    width: 50vw;
-
-    transition: width 0.5s ease;
-}
-
-#contact1Img:hover ~ #contact1Text {
-    width: 42vw;
-}
-
-div#contact1 div {
-    padding: 20px;
-}
-
-div#contact1 div h3 {
-    text-align: center;
-}
-
-div#extra {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-
-    margin-top: 15px;
-
-    background-color: #eacfca;
-}
-
-div#extra img {
-    width: 100%;
-}
-
-div#extra div#extraImg {
-    width: 30vw;
-    transition: width 0.5s ease;
-}
-
-div#extra div#extraImg:hover {
-    width: 35.4vw;
-}
-
-div#extra div#extraText {
-    text-align: center;
-    width: 50vw;
-    font-size: 20px;
-
-    transition: width 0.5s ease;
-}
-
-#extraImg:hover ~ #extraText {
-    width: 42vw;
-}
-
-div#extra div {
-    padding: 20px;
-}
-
-div#affilation {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    align-items: center;
-
-    margin-top: 15px;
-
-    background-color: #8a766c;
-}
-
-div#affilation img {
-    width: 100%;
-}
-
-div#affilation div#affilationImg {
-    width: 30vw;
-    transition: width 0.5s ease;
-}
-
-div#affilation div#affilationImg:hover {
-    width: 35.4vw;
-}
-
-div#affilation div#affilationText {
-    text-align: center;
-    width: 50vw;
-
-    transition: width 0.5s ease;
-}
-
-div#affilation div#affilationText img {
-    width: 25vw;
-    transition: width 0.5s ease;
-}
-
-div#affilation div#affilationText img:hover {
-    width: 35.4vw;
-}
-
-#affilationImg:hover ~ #affilationText {
-    width: 42vw;
-}
-
-div#affilation div {
-    padding: 20px;
-}
-
-
-
-@media screen and (max-width: 1000px) {
-    div#welcome div#imageHolder {
-        width: 75vw;
-        height: 50vw;
-    }
-
-    div#about div#aboutImg {
-        width: 95vw;
-    }
-
-    div#about div#aboutText {
-        width: auto;
-    }
-
-    div#service div#serviceImg {
-        width: 95vw;
-    }
-
-    div#service div#serviceText {
-        width: auto;
-    }
-
-    div#contact div#contactImg {
-        width: 95vw;
-    }
-
-    div#contact div#contactText {
-        width: auto;
-    }
-
-    div#contact1 div#contact1Img {
-        width: 95vw;
-    }
-
-    div#contact1 div#contact1Text {
-        width: auto;
-    }
-
-    div#extra div#extraImg {
-        width: 95vw;
-    }
-
-    div#extra div#extraText {
-        width: auto;
-    }
-
-
-    div#affilation div#affilationText {
-        width: auto;
-    }
-
-
 }
